--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.11.0",
   "description": "Simple JSX command-line tool",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/petehunt/jsxc"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
