--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "jsxc": "bin/jsxc"
   },
   "dependencies": {
-    "chokidar": "~0.8.0",
-    "glob": "~3.2.7",
-    "mkdirp": "~0.3.5",
-    "optimist": "~0.6.0",
-    "react-tools": "~0.11"
+    "chokidar": "^1.0.0-rc3",
+    "glob": "^4.4.0",
+    "mkdirp": "^0.5.0",
+    "optimist": "^0.6.1",
+    "react-tools": "^0.13.0-beta.2"
   },
   "keywords": [
     "jsx",
