--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsxc",
-  "version": "0.11.0",
+  "version": "0.13.0-beta.2",
   "description": "Simple JSX command-line tool",
   "main": "index.js",
   "repository": {
